--- a/config/wazuh_cluster/wazuh_manager.conf
+++ b/config/wazuh_cluster/wazuh_manager.conf
@@ -58,6 +58,7 @@
     <log_format>syslog</log_format>
     <location>/var/log/mysql/mysql.log</location>
   </localfile>
+
     <!-- ============================================ -->
   <!-- LEER LOGS DE PROXYSQL DIRECTAMENTE             -->
   <!-- ============================================ -->
@@ -66,6 +67,20 @@
     <log_format>json</log_format>
     <location>/var/log/proxysql/queries.log</location>
   </localfile>
+
+  <!-- ============================================ -->
+  <!-- INTEGRACIÓN CON N8N VIA WEBHOOK              -->
+  <!-- ============================================ -->
+  <integration>
+    <name>custom-n8n</name>
+    <hook_url>http://n8n:5678/webhook-test/wazuh-proxysql</hook_url>
+    <level>8</level>
+    <rules>100501,100502,100503,100504,100505,100506,100507,100508</rules>
+    <command>/var/ossec/integrations/custom-n8n</command>
+    <timeout>10</timeout>
+    <format>json</format>
+    <output>no</output>
+  </integration>
 
   <!-- Policy monitoring -->
   <rootcheck>
