--- a/config/wazuh_cluster/wazuh_manager.conf
+++ b/config/wazuh_cluster/wazuh_manager.conf
@@ -69,17 +69,14 @@
   </localfile>
 
   <!-- ============================================ -->
-  <!-- INTEGRACIÓN CON N8N VIA WEBHOOK              -->
+  <!-- INTEGRACIÓN CON N8N                          -->
   <!-- ============================================ -->
   <integration>
     <name>custom-n8n</name>
-    <hook_url>http://n8n:5678/webhook-test/wazuh-proxysql</hook_url>
+    <hook_url>http://n8n:5678/webhook/wazuh-proxysql</hook_url>
     <level>8</level>
-    <rules>100501,100502,100503,100504,100505,100506,100507,100508</rules>
-    <command>/var/ossec/integrations/custom-n8n</command>
-    <timeout>10</timeout>
-    <format>json</format>
-    <output>no</output>
+    <rule_id>100502,100503,100504,100505,100506,100507,100508</rule_id>
+    <alert_format>json</alert_format>
   </integration>
 
   <!-- Policy monitoring -->
