--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,12 +151,11 @@ services:
     networks:
       - poc-network
     ports:
-      - "3306:6033"   # Puerto SQL para aplicaciones
-      - "6032:6032"   # Puerto Admin
+      - "3306:6033"
+      - "6032:6032"
     volumes:
       - ./config/proxysql/proxysql.cnf:/etc/proxysql.cnf:ro
-      - ./config/proxysql/init_proxysql.sql:/docker-entrypoint-initdb.d/init_proxysql.sql:ro
-      - ./config/proxysql/entrypoint.sh:/docker-entrypoint.sh:ro
+      - ./config/proxysql/update-symlink.sh:/update-symlink.sh:ro
       - proxysql-data:/var/lib/proxysql
       - proxysql-logs:/var/log/proxysql
     environment:
@@ -164,6 +163,13 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        proxysql -f -c /etc/proxysql.cnf &
+        sleep 10
+        sh /update-symlink.sh &
+        wait
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-u", "admin", "-padmin"]
       interval: 10s
